fix: adjust date tooltip to avoid unnecessary scrollbar

--- a/browser_action/browser_action.css
+++ b/browser_action/browser_action.css
@@ -158,7 +158,7 @@ td {
 
 #checked_tooltip {
   width: max-content;
-  margin-left: -5rem;
+  margin-left: -10rem;
   margin-top: -1.25rem;
 }
 
